--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.2"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "src/routes/*.tsx"
+    ]
   }
 }
