WIP: update login and auth styled components and package.json jest collectCoverageFrom

--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
   "jest": {
     "coveragePathIgnorePatterns": [
       "src/routes/*.tsx"
+    ],
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx"
     ]
   }
 }
